2016-05-04  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (init_start_time): new fn, factored out from
	initstarttime.
	(get_date_and_time): if envvar SOURCE_DATE_EPOCH_TEX_PRIMITIVES
	is set, initialize minutes, day, month, year, from
	SOURCE_DATE_EPOCH value.  Requested by Debian, thread starting at
	http://tug.org/pipermail/tex-k/2016-May/002691.html.

2016-04-14  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Fix a bug to show input file name in the case of pipe input.
	Reported by Enrico Gregorio:
	http://tug.org/pipermail/tex-live/2016-April/038030.html

2016-03-22  Karl Berry  <karl@freefriends.org>

	* texmfmp.c: no uexit after FATAL.

2016-03-21  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (initstarttime): wording of invalid SOURCE_DATE_EPOCH.

2016-01-26  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Improve to skip BOM (win32 only).

2016-01-02  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2015 ---> 2016.

2015-11-15  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Show return code of system() if it is not zero.

2015-11-01  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Improve restricted shell escape for w32 a little.

2015-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Another minor modification (unused static).

2015-08-18  The Thanh Han  <hanthethanh@gmail.com>

	* texmfmp.c: Patch from Maria with some minor modification.

2015-07-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Add \pdfmdfivesum to XeTeX.

2015-07-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Moved convertStringToHexString() and getmd5sum()
	from ../pdftexdir/utils.c to here.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrate MFLua and MFLuaJIT.
	* texmfmp.c: Adapted.

2015-03-16  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2014 ---> 2015.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
